@@ -1,4 +1,4 @@
-4.00.2+dev0-2012-10-03
+4.00.2+dev1-2012-10-16
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
